# brx_sync

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  ARCHITETTURA_ENTERPRISE.md  AUTHENTICATION_ANALYSIS.md  AUTHENTICATION_IMPLEMENTATION.md  CARDTRADER_EDITABLE_FIELDS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  LOGS_README.md  NEXT_STEPS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  SCALABILITA_RIEPILOGO.md  SCALABILITY_ANALYSIS.md  SETUP_MACOS.md  SETUP_PASSO5.md  SYNC_TROUBLESHOOTING.md  TESTING_GUIDE.md  TEST_LOCALE.md  WEBHOOKS_GUIDE.md  WEBHOOK_SETUP.md  WORKER_GUIDE.md  alembic.ini  db-aggiornamenti-inventory.txt  doc_card_trader.txt  docker-compose.yml  migrate_operation_metadata.sql  mypy.ini  passo 1 db.txt  passo 2.txt  passo 3.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  (+8 more)
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: schemas.py
app/api/v1/routes/: sync.py
app/core/: __init__.py  cardtrader_properties.py  config.py  crypto.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  health.py  logging.py  metrics.py  prometheus_metrics.py  redis_client.py  security.py  validators.py  webhook_validator.py
app/models/: __init__.py  inventory.py
app/services/: __init__.py  adaptive_rate_limiter.py  blueprint_mapper.py  cardtrader_client.py  circuit_breaker.py  rate_limiter.py  webhook_processor.py
app/tasks/: __init__.py  celery_app.py  periodic_sync.py  sync_tasks.py
migrations/: add_composite_index.sql  add_description_user_data_graded.sql  env.py
static/: index.html
tests/: __init__.py  conftest.py
tests/unit/test_services/: test_rate_limiter.py
